--- a/mobile/.gitignore
+++ b/mobile/.gitignore
@@ -29,6 +29,10 @@ build/
 local.properties
 *.iml
 
+# Visual Studio Code
+#
+.vscode/
+
 # node.js
 #
 node_modules/
@@ -57,3 +61,9 @@ buck-out/
 
 # CocoaPods
 /ios/Pods/
+
+**/*.js
+node_modules
+build
+android
+ios
